@@ -1,0 +1,7 @@
+PACKAGE = 'cvsanaly2'
+VERSION = '1.99.90 (2.0.0-beta1)'
+
+AUTHOR = 'LibreSoft'
+AUTHOR_EMAIL = 'libresoft-tools-devel@lists.morfeo-project.org'
+COPYRIGHT = "Copyright (C) 2004-2009 %s <%s>" % (AUTHOR, AUTHOR_EMAIL)
+DESCRIPTION = "An analysis tool for your source code repository"
